--- a/index.html
+++ b/index.html
@@ -1,11 +1,51 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Mi página en GitHub Pages</title>
+    <title>Página personal - Ethan</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel='stylesheet' href="style.css">
 </head>
 <body>
-    <h1>Hola, soy Ethan</h1>
-    <p>Esta es mi página para la práctica 1.</p>
+    <main class="card">
+        <header class="header">
+            <h1>Ethan [Apellidos]</h1>
+            <p>Estudiante de [Ciclo / Grado] · Valdemoro, Comunidad de Madrid</p>
+        </header>
+
+        <section class="content">
+            <div class="photo">
+                <!-- Cambia "img/foto.jpg" por la ruta real de tu foto -->
+                <img src="img/foto.jpg" alt="Foto de Ethan">
+            </div>
+
+            <div class="info">
+                <h2>Datos personales</h2>
+                <p><span class="label">Nombre completo:</span> Ethan [Apellidos]</p>
+                <p><span class="label">Fecha de nacimiento:</span> [dd/mm/aaaa]</p>
+                <p><span class="label">Localidad:</span> Valdemoro (Madrid, España)</p>
+                <p><span class="label">Email:</span> <a href="mailto:tuemail@example.com">tuemail@example.com</a></p>
+
+                <div class="section">
+                    <h3>Sobre mí</h3>
+                    <p>
+                        Soy estudiante de [ciclo/grado] con interés en [programación, sistemas, redes…].
+                        Me gusta aprender cosas nuevas, cacharrear con servidores y mejorar poco a poco mis proyectos.
+                    </p>
+                </div>
+
+                <div class="section">
+                    <h3>Intereses</h3>
+                    <ul>
+                        <li>Desarrollo web (HTML, CSS, etc.)</li>
+                        <li>Administración de sistemas (Linux, servidores, cloud)</li>
+                        <li>Tecnología y hardware</li>
+                        <li>[Añade algo más personal: música, deporte, videojuegos…]</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
+
