--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Lato:wght@400;700&display=swap" rel="stylesheet"/>
 
+  <link href="style.css" rel="stylesheet"/>
+  
 </head>
 <body>
 
@@ -292,3 +294,4 @@
   </footer>
 </body>
 </html>
+
