--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <!--Ponemos btn para que bootstrap convierta nuestro enlace en un boton, podriamos hacer algo un poco mas cutre y es hacer <button><a></a></button>,
         haciendo esta declaracion con bootstrap conseguimos exactamente lo mismo, px y py significa padding x e y respectivamente-->
         <a href="CV Izan López Practicas 2026.pdf" class="btn boton-cv px-4 py-2">
-          <i class="bi bi-file-earmark-person-fill me-2"></i>Ver mi CV
+          <i class="bi bi-file-earmark-person-fill me-2"></i>Ver mi CV.
         </a>
       </section>
 
